--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,90 +1,99 @@
-* {
-	margin: 0;
-	border: 0;
-	padding: 0;
-	box-sizing: border-box;
+$mostusedsize:1rem;
+
+body{
+    
+        margin: 0;
+        border: 0;
+        padding: 0;
+        box-sizing: border-box;
+    
 }
 
 .header {
 	height: 6rem;
 	text-align: center;
 	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-	padding: 1.5rem;
+    padding: 1.5rem;
+    h1, h2 {
+        font-size: $mostusedsize;
+    }
+
+    
 }
 
-h1, h2 {
-	font-size: 1rem;
+nav{
+    .nav_links {
+        margin-top: $mostusedsize;
+        display: flex;
+        justify-content: center;
+        margin-bottom: $mostusedsize;
+        background-color: rgba(0, 0, 255, 0.514);
+        li {
+            padding:$mostusedsize;
+            list-style: none;
+            a {
+                text-decoration: none;
+                color: black;
+                font-family: Arial, Helvetica, sans-serif;
+            }
+            
+        }
+
+    }
+    
 }
 
-.nav_links {
-	margin-top: 1rem;
-	display: flex;
-	justify-content: center;
-	margin-bottom: 1rem;
-	background-color: rgba(0, 0, 255, 0.514);
-}
-
-li {
-	padding:1rem;
-	list-style: none;
-}
-
-a {
-	text-decoration: none;
-	color: black;
-	font-family: Arial, Helvetica, sans-serif;
-}
 .main {
 	display: flex;
 	flex-flow: column nowrap;
 	justify-content: center;
-	align-items: center;
-}
-
-.section_text > h3 {
-	text-align: center;
-}
-
-.section_text, .section_images {
-	margin: 1rem;
-}
-
-.section_images {
-	display: flex;
-	flex-flow: column nowrap;
-	justify-content: center;
-	align-items: center;
+    align-items: center;
+    .section_text > h3 {
+        text-align: center;
+    }&.section_images {
+        margin: 1rem;
+    }
+    .section_images {
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: center;
+        align-items: center;
+        img {
+            height: 12rem;
+            width: 18rem;
+            margin: 0 0.5rem 1rem 0.5rem
+        }
+         
+    }
+    
     
 }
-img {
-	height: 12rem;
-	width: 18rem;
-	margin: 0 0.5rem 1rem 0.5rem
-}
-
 .aside {
 	display: flex;
 	flex-flow: column nowrap;
 	justify-content: center;
-	margin: 1rem;
-}
-
-
-.first_aside, .second_aside, .third_aside, .fourth_aside {
-	border: 0.2rem solid rgba(0, 0, 255, 0.678);    
-	padding: 1rem;
-	margin-bottom: 1rem;
-}
-
-.footer_links {
-	display: flex;
-	justify-content: center;
-	margin-bottom: 1rem;
+    margin: 1rem;
+    .first_aside, .second_aside, .third_aside, .fourth_aside {
+        border: 0.2rem solid rgba(0, 0, 255, 0.678);    
+        padding: 1rem;
+        margin-bottom: 1rem;
+    }
+    
 }
 .footer {
 	height: 5rem;
 	margin-top: 1rem;
-	background-color: rgba(0, 0, 255, 0.678);
+    background-color: rgba(0, 0, 255, 0.678);
+
+
+    .footer_links {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 1rem;
+        
+    
+}
+
 }
 
 @media screen and (min-width: 600px) {
@@ -107,4 +116,8 @@ img {
     	margin: 0.5rem;
 	}
 }
+
+
+
+    
 
